@@ -36,6 +36,7 @@
 #include "../main/screen_quickreconnect.h"
 #include "../main/screen_textentry.h"
 #include "../compat.h"
+#include "../config.h"
 #include "../game_main.h"
 #include "../main/game_globals.h"
 #include "../core/render.h"
@@ -2229,6 +2230,15 @@ void UpdateGraphics(bool skipRepaint)
             }
 
             g_stats.print();
+
+            if(!BattleMode && !GameMenu && g_config.show_episode_title)
+            {
+                int y = (ScreenH >= 640) ? 20 : ScreenH - 60;
+                if(g_config.show_episode_title == Config_t::EPISODE_TITLE_TRANSPARENT)
+                    SuperPrintScreenCenter(WorldName, 3, y, 1.f, 1.f, 1.f, 0.5f);
+                else
+                    SuperPrintScreenCenter(WorldName, 3, y, 1.f, 1.f, 1.f, 1.f);
+            }
 
         }
 
