@@ -21,6 +21,7 @@ Changelog for 1.3.6 [WIP]
 -Added an ability to customize UI/common assets from the episode and level sides (@Wohlstand)
 -Added a blink effect at speedrun timer on level/episode completion (@Wohlstand)
 -Added an in-game editor based on the original game's editor code (requires EditorIcons.png asset) (@ds-sloth)
+-Added config option to show the current episode's title onscreen (@ds-sloth)
 
 Changes for 1.3.5.3-1
 -Fixed autostart events behaviour
